Improvement: double-spread detection, continuous scroll mode being more efficient, etc
